# Hello-OpenGL

./: CMakeLists.txt
headers/: display.h  mesh.h  shader.h
shaders/: basicShader.frag
sources/: display.cpp  main.cpp  mesh.cpp  shader.cpp
